# LearnVulkan

./: .gitignore  CMakeLists.txt  main.cpp
cmake/: compile_font_msdf.cmake  compile_shaders.cmake  setup_glm.cmake  setup_imgui.cmake  setup_sdl.cmake  setup_sdl3.cmake  setup_stbimage.cmake  setup_vkbootstrap.cmake  setup_vma.cmake
examples/: entrance.cpp  renderer_barchart.cpp  renderer_barchart.h  renderer_barchart_font.cpp  renderer_barchart_font.h  renderer_compute_bg.cpp  renderer_compute_bg.h  renderer_mesh.cpp  renderer_mesh.h  renderer_triangle.cpp  renderer_triangle.h
shaders/: barchart.comp  barchart_font.comp
src/: imgui_layer.cpp  imgui_layer.h  renderer_compute_bg.cpp  renderer_compute_bg.h  renderer_iface.h  renderer_mesh.cpp  renderer_mesh.h  renderer_triangle.cpp  renderer_triangle.h  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_images.cpp  vk_pipelines.cpp  vk_pipelines.h  vulkan_engine.cpp  vulkan_engine.h  vulkan_initializers.cpp  vulkan_initializers.h
src/ext/: vk_descriptors.cpp  vk_images.cpp  vk_initializers.h
vkbootstrap/: VkBootstrap.cpp  VkBootstrap.h  VkBootstrapDispatch.h
